// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseTimetableS arrivalCancelled.xml 1`] = `
Object {
  "additional": undefined,
  "arrival": Object {
    "hidden": false,
    "platform": "13",
    "scheduledPlatform": "13",
    "scheduledTime": 2019-03-17T12:58:00.000Z,
    "time": 2019-03-17T12:58:00.000Z,
    "wingIds": undefined,
  },
  "currentStopPlace": Object {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": Object {
    "hidden": false,
    "platform": "13",
    "scheduledPlatform": "13",
    "scheduledTime": 2019-03-17T13:00:00.000Z,
    "time": 2019-03-17T13:00:00.000Z,
    "wingIds": undefined,
  },
  "id": "6062058741531589910",
  "initialDeparture": 2019-03-16T14:24:00.000Z,
  "mediumId": "6062058741531589910-1903161424",
  "o": "800354",
  "productClass": "S",
  "rawId": "-6062058741531589910-1903161424-13",
  "routePost": Array [
    Object {
      "name": "Düsseldorf-Flingern",
    },
    Object {
      "name": "Düsseldorf-Gerresheim",
    },
    Object {
      "name": "Erkrath",
    },
    Object {
      "name": "Hochdahl",
    },
    Object {
      "name": "Hochdahl-Millrath",
    },
    Object {
      "name": "Haan-Gruiten",
    },
    Object {
      "name": "Wuppertal-Vohwinkel",
    },
    Object {
      "name": "Wuppertal-Sonnborn",
    },
    Object {
      "name": "Wuppertal-Zoologischer Garten",
    },
    Object {
      "name": "Wuppertal-Steinbeck",
    },
    Object {
      "name": "Wuppertal Hbf",
    },
    Object {
      "name": "Wuppertal-Unterbarmen",
    },
    Object {
      "name": "Wuppertal-Barmen",
    },
    Object {
      "name": "Wuppertal-Oberbarmen",
    },
    Object {
      "name": "Wuppertal-Langerfeld",
    },
    Object {
      "name": "Schwelm West",
    },
    Object {
      "name": "Schwelm",
    },
    Object {
      "name": "Gevelsberg West",
    },
    Object {
      "name": "Gevelsberg-Kipp",
    },
    Object {
      "name": "Gevelsberg Hbf",
    },
    Object {
      "name": "Gevelsberg-Knapp",
    },
    Object {
      "name": "Hagen-Westerbauer",
    },
    Object {
      "name": "Hagen-Heubing",
    },
    Object {
      "name": "Hagen-Wehringhausen",
    },
    Object {
      "name": "Hagen Hbf",
    },
  ],
  "routePre": Array [
    Object {
      "name": "Mönchengladbach Hbf",
    },
    Object {
      "name": "Mönchengladbach-Lürrip",
    },
    Object {
      "name": "Korschenbroich",
    },
    Object {
      "name": "Kleinenbroich",
    },
    Object {
      "name": "Büttgen",
    },
    Object {
      "name": "Neuss Hbf",
    },
    Object {
      "name": "Neuss Am Kaiser",
    },
    Object {
      "name": "Neuss Rheinparkcenter",
    },
    Object {
      "name": "Düsseldorf-Hamm",
    },
    Object {
      "name": "Düsseldorf Völklinger Str.",
    },
    Object {
      "name": "Düsseldorf-Bilk",
    },
    Object {
      "name": "Düsseldorf Friedrichstadt",
    },
  ],
  "scheduledDestination": "Hagen Hbf",
  "substitute": false,
  "train": Object {
    "line": "8",
    "longDistance": false,
    "name": "S 8",
    "number": "30889",
    "type": "S",
  },
}
`;

exports[`parseTimetableS arrivalWing.xml 1`] = `
Object {
  "additional": undefined,
  "arrival": Object {
    "hidden": false,
    "platform": "8",
    "scheduledPlatform": "8",
    "scheduledTime": 2019-03-17T12:32:00.000Z,
    "time": 2019-03-17T12:32:00.000Z,
    "wingIds": Array [
      "4550748245722881479-1903170818",
    ],
  },
  "currentStopPlace": Object {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": Object {
    "hidden": false,
    "platform": "8 D-G",
    "scheduledPlatform": "8 D-G",
    "scheduledTime": 2019-03-17T12:36:00.000Z,
    "time": 2019-03-17T12:36:00.000Z,
    "wingIds": undefined,
  },
  "id": "4771830392602697451",
  "initialDeparture": 2019-03-17T08:18:00.000Z,
  "mediumId": "4771830392602697451-1903170818",
  "o": "80",
  "productClass": "F",
  "rawId": "4771830392602697451-1903170818-10",
  "routePost": Array [
    Object {
      "name": "Hamburg-Harburg",
    },
    Object {
      "name": "Hamburg Hbf",
    },
    Object {
      "name": "Hamburg Dammtor",
    },
    Object {
      "name": "Hamburg-Altona",
    },
  ],
  "routePre": Array [
    Object {
      "name": "München Hbf",
    },
    Object {
      "name": "München-Pasing",
    },
    Object {
      "name": "Augsburg Hbf",
    },
    Object {
      "name": "Donauwörth",
    },
    Object {
      "name": "Nürnberg Hbf",
    },
    Object {
      "name": "Würzburg Hbf",
    },
    Object {
      "name": "Fulda",
    },
    Object {
      "name": "Kassel-Wilhelmshöhe",
    },
    Object {
      "name": "Göttingen",
    },
  ],
  "scheduledDestination": "Hamburg-Altona",
  "substitute": false,
  "train": Object {
    "line": undefined,
    "longDistance": true,
    "name": "ICE 1680",
    "number": "1680",
    "type": "ICE",
  },
}
`;

exports[`parseTimetableS arrivalWing.xml 2`] = `
Object {
  "additional": undefined,
  "arrival": Object {
    "hidden": false,
    "platform": "8",
    "scheduledPlatform": "8",
    "scheduledTime": 2019-03-17T12:32:00.000Z,
    "time": 2019-03-17T12:32:00.000Z,
    "wingIds": undefined,
  },
  "currentStopPlace": Object {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": Object {
    "hidden": false,
    "platform": "8 A-D",
    "scheduledPlatform": "8 A-D",
    "scheduledTime": 2019-03-17T12:45:00.000Z,
    "time": 2019-03-17T12:45:00.000Z,
    "wingIds": undefined,
  },
  "id": "4550748245722881479",
  "initialDeparture": 2019-03-17T08:18:00.000Z,
  "mediumId": "4550748245722881479-1903170818",
  "o": "80",
  "productClass": "F",
  "rawId": "-4550748245722881479-1903170818-10",
  "routePost": Array [
    Object {
      "name": "Bremen Hbf",
    },
  ],
  "routePre": Array [
    Object {
      "name": "München Hbf",
    },
    Object {
      "name": "München-Pasing",
    },
    Object {
      "name": "Augsburg Hbf",
    },
    Object {
      "name": "Donauwörth",
    },
    Object {
      "name": "Nürnberg Hbf",
    },
    Object {
      "name": "Würzburg Hbf",
    },
    Object {
      "name": "Fulda",
    },
    Object {
      "name": "Kassel-Wilhelmshöhe",
    },
    Object {
      "name": "Göttingen",
    },
  ],
  "scheduledDestination": "Bremen Hbf",
  "substitute": false,
  "train": Object {
    "line": "24",
    "longDistance": true,
    "name": "ICE 1580",
    "number": "1580",
    "type": "ICE",
  },
}
`;

exports[`parseTimetableS cancelled.xml 1`] = `
Object {
  "additional": undefined,
  "arrival": Object {
    "hidden": false,
    "platform": "13",
    "scheduledPlatform": "13",
    "scheduledTime": 2019-03-17T12:58:00.000Z,
    "time": 2019-03-17T12:58:00.000Z,
    "wingIds": undefined,
  },
  "currentStopPlace": Object {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": Object {
    "hidden": false,
    "platform": "13",
    "scheduledPlatform": "13",
    "scheduledTime": 2019-03-17T13:00:00.000Z,
    "time": 2019-03-17T13:00:00.000Z,
    "wingIds": undefined,
  },
  "id": "6062058741531589910",
  "initialDeparture": 2019-03-16T14:24:00.000Z,
  "mediumId": "6062058741531589910-1903161424",
  "o": "800354",
  "productClass": "S",
  "rawId": "-6062058741531589910-1903161424-13",
  "routePost": Array [
    Object {
      "name": "Düsseldorf-Flingern",
    },
    Object {
      "name": "Düsseldorf-Gerresheim",
    },
    Object {
      "name": "Erkrath",
    },
    Object {
      "name": "Hochdahl",
    },
    Object {
      "name": "Hochdahl-Millrath",
    },
    Object {
      "name": "Haan-Gruiten",
    },
    Object {
      "name": "Wuppertal-Vohwinkel",
    },
    Object {
      "name": "Wuppertal-Sonnborn",
    },
    Object {
      "name": "Wuppertal-Zoologischer Garten",
    },
    Object {
      "name": "Wuppertal-Steinbeck",
    },
    Object {
      "name": "Wuppertal Hbf",
    },
    Object {
      "name": "Wuppertal-Unterbarmen",
    },
    Object {
      "name": "Wuppertal-Barmen",
    },
    Object {
      "name": "Wuppertal-Oberbarmen",
    },
    Object {
      "name": "Wuppertal-Langerfeld",
    },
    Object {
      "name": "Schwelm West",
    },
    Object {
      "name": "Schwelm",
    },
    Object {
      "name": "Gevelsberg West",
    },
    Object {
      "name": "Gevelsberg-Kipp",
    },
    Object {
      "name": "Gevelsberg Hbf",
    },
    Object {
      "name": "Gevelsberg-Knapp",
    },
    Object {
      "name": "Hagen-Westerbauer",
    },
    Object {
      "name": "Hagen-Heubing",
    },
    Object {
      "name": "Hagen-Wehringhausen",
    },
    Object {
      "name": "Hagen Hbf",
    },
  ],
  "routePre": Array [
    Object {
      "name": "Mönchengladbach Hbf",
    },
    Object {
      "name": "Mönchengladbach-Lürrip",
    },
    Object {
      "name": "Korschenbroich",
    },
    Object {
      "name": "Kleinenbroich",
    },
    Object {
      "name": "Büttgen",
    },
    Object {
      "name": "Neuss Hbf",
    },
    Object {
      "name": "Neuss Am Kaiser",
    },
    Object {
      "name": "Neuss Rheinparkcenter",
    },
    Object {
      "name": "Düsseldorf-Hamm",
    },
    Object {
      "name": "Düsseldorf Völklinger Str.",
    },
    Object {
      "name": "Düsseldorf-Bilk",
    },
    Object {
      "name": "Düsseldorf Friedrichstadt",
    },
  ],
  "scheduledDestination": "Hagen Hbf",
  "substitute": false,
  "train": Object {
    "line": "8",
    "longDistance": false,
    "name": "S 8",
    "number": "30889",
    "type": "S",
  },
}
`;

exports[`parseTimetableS departureCancelled.xml 1`] = `
Object {
  "additional": undefined,
  "arrival": Object {
    "hidden": false,
    "platform": "13",
    "scheduledPlatform": "13",
    "scheduledTime": 2019-03-17T12:58:00.000Z,
    "time": 2019-03-17T12:58:00.000Z,
    "wingIds": undefined,
  },
  "currentStopPlace": Object {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": Object {
    "hidden": false,
    "platform": "13",
    "scheduledPlatform": "13",
    "scheduledTime": 2019-03-17T13:00:00.000Z,
    "time": 2019-03-17T13:00:00.000Z,
    "wingIds": undefined,
  },
  "id": "6062058741531589910",
  "initialDeparture": 2019-03-16T14:24:00.000Z,
  "mediumId": "6062058741531589910-1903161424",
  "o": "800354",
  "productClass": "S",
  "rawId": "-6062058741531589910-1903161424-13",
  "routePost": Array [
    Object {
      "name": "Düsseldorf-Flingern",
    },
    Object {
      "name": "Düsseldorf-Gerresheim",
    },
    Object {
      "name": "Erkrath",
    },
    Object {
      "name": "Hochdahl",
    },
    Object {
      "name": "Hochdahl-Millrath",
    },
    Object {
      "name": "Haan-Gruiten",
    },
    Object {
      "name": "Wuppertal-Vohwinkel",
    },
    Object {
      "name": "Wuppertal-Sonnborn",
    },
    Object {
      "name": "Wuppertal-Zoologischer Garten",
    },
    Object {
      "name": "Wuppertal-Steinbeck",
    },
    Object {
      "name": "Wuppertal Hbf",
    },
    Object {
      "name": "Wuppertal-Unterbarmen",
    },
    Object {
      "name": "Wuppertal-Barmen",
    },
    Object {
      "name": "Wuppertal-Oberbarmen",
    },
    Object {
      "name": "Wuppertal-Langerfeld",
    },
    Object {
      "name": "Schwelm West",
    },
    Object {
      "name": "Schwelm",
    },
    Object {
      "name": "Gevelsberg West",
    },
    Object {
      "name": "Gevelsberg-Kipp",
    },
    Object {
      "name": "Gevelsberg Hbf",
    },
    Object {
      "name": "Gevelsberg-Knapp",
    },
    Object {
      "name": "Hagen-Westerbauer",
    },
    Object {
      "name": "Hagen-Heubing",
    },
    Object {
      "name": "Hagen-Wehringhausen",
    },
    Object {
      "name": "Hagen Hbf",
    },
  ],
  "routePre": Array [
    Object {
      "name": "Mönchengladbach Hbf",
    },
    Object {
      "name": "Mönchengladbach-Lürrip",
    },
    Object {
      "name": "Korschenbroich",
    },
    Object {
      "name": "Kleinenbroich",
    },
    Object {
      "name": "Büttgen",
    },
    Object {
      "name": "Neuss Hbf",
    },
    Object {
      "name": "Neuss Am Kaiser",
    },
    Object {
      "name": "Neuss Rheinparkcenter",
    },
    Object {
      "name": "Düsseldorf-Hamm",
    },
    Object {
      "name": "Düsseldorf Völklinger Str.",
    },
    Object {
      "name": "Düsseldorf-Bilk",
    },
    Object {
      "name": "Düsseldorf Friedrichstadt",
    },
  ],
  "scheduledDestination": "Hagen Hbf",
  "substitute": false,
  "train": Object {
    "line": "8",
    "longDistance": false,
    "name": "S 8",
    "number": "30889",
    "type": "S",
  },
}
`;

exports[`parseTimetableS departureWing.xml 1`] = `
Object {
  "additional": undefined,
  "arrival": Object {
    "hidden": false,
    "platform": "4 D-G",
    "scheduledPlatform": "4 D-G",
    "scheduledTime": 2019-03-17T13:22:00.000Z,
    "time": 2019-03-17T13:22:00.000Z,
    "wingIds": undefined,
  },
  "currentStopPlace": Object {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": Object {
    "hidden": false,
    "platform": "4",
    "scheduledPlatform": "4",
    "scheduledTime": 2019-03-17T13:26:00.000Z,
    "time": 2019-03-17T13:26:00.000Z,
    "wingIds": Array [
      "8086827825752200553-1903171315",
    ],
  },
  "id": "6523045328284948841",
  "initialDeparture": 2019-03-17T12:46:00.000Z,
  "mediumId": "6523045328284948841-1903171246",
  "o": "80",
  "productClass": "F",
  "rawId": "6523045328284948841-1903171246-5",
  "routePost": Array [
    Object {
      "name": "Göttingen",
    },
    Object {
      "name": "Kassel-Wilhelmshöhe",
    },
    Object {
      "name": "Fulda",
    },
    Object {
      "name": "Würzburg Hbf",
    },
    Object {
      "name": "Nürnberg Hbf",
    },
    Object {
      "name": "Ingolstadt Hbf",
    },
    Object {
      "name": "München Hbf",
    },
  ],
  "routePre": Array [
    Object {
      "name": "Hamburg-Altona",
    },
    Object {
      "name": "Hamburg Dammtor",
    },
    Object {
      "name": "Hamburg Hbf",
    },
    Object {
      "name": "Hamburg-Harburg",
    },
  ],
  "scheduledDestination": "München Hbf",
  "substitute": false,
  "train": Object {
    "line": "24",
    "longDistance": true,
    "name": "ICE 1689",
    "number": "1689",
    "type": "ICE",
  },
}
`;

exports[`parseTimetableS departureWing.xml 2`] = `
Object {
  "additional": undefined,
  "arrival": Object {
    "hidden": false,
    "platform": "4 A-C",
    "scheduledPlatform": "4 A-C",
    "scheduledTime": 2019-03-17T13:14:00.000Z,
    "time": 2019-03-17T13:14:00.000Z,
    "wingIds": undefined,
  },
  "currentStopPlace": Object {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": Object {
    "hidden": false,
    "platform": "4",
    "scheduledPlatform": "4",
    "scheduledTime": 2019-03-17T13:26:00.000Z,
    "time": 2019-03-17T13:26:00.000Z,
    "wingIds": undefined,
  },
  "id": "8086827825752200553",
  "initialDeparture": 2019-03-17T13:15:00.000Z,
  "mediumId": "8086827825752200553-1903171315",
  "o": "80",
  "productClass": "F",
  "rawId": "-8086827825752200553-1903171315-2",
  "routePost": Array [
    Object {
      "name": "Göttingen",
    },
    Object {
      "name": "Kassel-Wilhelmshöhe",
    },
    Object {
      "name": "Fulda",
    },
    Object {
      "name": "Würzburg Hbf",
    },
    Object {
      "name": "Nürnberg Hbf",
    },
    Object {
      "name": "Ingolstadt Hbf",
    },
    Object {
      "name": "München Hbf",
    },
  ],
  "routePre": Array [
    Object {
      "name": "Bremen Hbf",
    },
  ],
  "scheduledDestination": "München Hbf",
  "substitute": false,
  "train": Object {
    "line": "24",
    "longDistance": true,
    "name": "ICE 1589",
    "number": "1589",
    "type": "ICE",
  },
}
`;

exports[`parseTimetableS filteredDueToTime.xml 1`] = `
Object {
  "additional": undefined,
  "arrival": Object {
    "hidden": false,
    "platform": "13",
    "scheduledPlatform": "13",
    "scheduledTime": 2019-03-17T10:58:00.000Z,
    "time": 2019-03-17T10:58:00.000Z,
    "wingIds": undefined,
  },
  "currentStopPlace": Object {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": Object {
    "hidden": false,
    "platform": "13",
    "scheduledPlatform": "13",
    "scheduledTime": 2019-03-17T11:00:00.000Z,
    "time": 2019-03-17T11:00:00.000Z,
    "wingIds": undefined,
  },
  "id": "6062058741531589910",
  "initialDeparture": 2019-03-16T14:24:00.000Z,
  "mediumId": "6062058741531589910-1903161424",
  "o": "800354",
  "productClass": "S",
  "rawId": "-6062058741531589910-1903161424-13",
  "routePost": Array [
    Object {
      "name": "Düsseldorf-Flingern",
    },
    Object {
      "name": "Düsseldorf-Gerresheim",
    },
    Object {
      "name": "Erkrath",
    },
    Object {
      "name": "Hochdahl",
    },
    Object {
      "name": "Hochdahl-Millrath",
    },
    Object {
      "name": "Haan-Gruiten",
    },
    Object {
      "name": "Wuppertal-Vohwinkel",
    },
    Object {
      "name": "Wuppertal-Sonnborn",
    },
    Object {
      "name": "Wuppertal-Zoologischer Garten",
    },
    Object {
      "name": "Wuppertal-Steinbeck",
    },
    Object {
      "name": "Wuppertal Hbf",
    },
    Object {
      "name": "Wuppertal-Unterbarmen",
    },
    Object {
      "name": "Wuppertal-Barmen",
    },
    Object {
      "name": "Wuppertal-Oberbarmen",
    },
    Object {
      "name": "Wuppertal-Langerfeld",
    },
    Object {
      "name": "Schwelm West",
    },
    Object {
      "name": "Schwelm",
    },
    Object {
      "name": "Gevelsberg West",
    },
    Object {
      "name": "Gevelsberg-Kipp",
    },
    Object {
      "name": "Gevelsberg Hbf",
    },
    Object {
      "name": "Gevelsberg-Knapp",
    },
    Object {
      "name": "Hagen-Westerbauer",
    },
    Object {
      "name": "Hagen-Heubing",
    },
    Object {
      "name": "Hagen-Wehringhausen",
    },
    Object {
      "name": "Hagen Hbf",
    },
  ],
  "routePre": Array [
    Object {
      "name": "Mönchengladbach Hbf",
    },
    Object {
      "name": "Mönchengladbach-Lürrip",
    },
    Object {
      "name": "Korschenbroich",
    },
    Object {
      "name": "Kleinenbroich",
    },
    Object {
      "name": "Büttgen",
    },
    Object {
      "name": "Neuss Hbf",
    },
    Object {
      "name": "Neuss Am Kaiser",
    },
    Object {
      "name": "Neuss Rheinparkcenter",
    },
    Object {
      "name": "Düsseldorf-Hamm",
    },
    Object {
      "name": "Düsseldorf Völklinger Str.",
    },
    Object {
      "name": "Düsseldorf-Bilk",
    },
    Object {
      "name": "Düsseldorf Friedrichstadt",
    },
  ],
  "scheduledDestination": "Hagen Hbf",
  "substitute": false,
  "train": Object {
    "line": "8",
    "longDistance": false,
    "name": "S 8",
    "number": "30889",
    "type": "S",
  },
}
`;

exports[`parseTimetableS lookbehind.xml 1`] = `
Object {
  "additional": undefined,
  "arrival": Object {
    "hidden": false,
    "platform": "16",
    "scheduledPlatform": "16",
    "scheduledTime": 2019-03-17T12:49:00.000Z,
    "time": 2019-03-17T12:49:00.000Z,
    "wingIds": undefined,
  },
  "currentStopPlace": Object {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": Object {
    "hidden": false,
    "platform": "16",
    "scheduledPlatform": "16",
    "scheduledTime": 2019-03-17T12:51:00.000Z,
    "time": 2019-03-17T12:51:00.000Z,
    "wingIds": undefined,
  },
  "id": "1869793107893408377",
  "initialDeparture": 2019-03-17T10:38:00.000Z,
  "mediumId": "1869793107893408377-1903171038",
  "o": "84",
  "productClass": "F",
  "rawId": "1869793107893408377-1903171038-6",
  "routePost": Array [
    Object {
      "name": "Köln Hbf",
    },
    Object {
      "name": "Frankfurt (M)  Flughafen Fernbf",
    },
    Object {
      "name": "Frankfurt (Main) Hbf",
    },
  ],
  "routePre": Array [
    Object {
      "name": "Amsterdam Centraal",
    },
    Object {
      "name": "Utrecht Centraal",
    },
    Object {
      "name": "Arnhem Centraal",
    },
    Object {
      "name": "Oberhausen Hbf",
    },
    Object {
      "name": "Duisburg Hbf",
    },
  ],
  "scheduledDestination": "Frankfurt (Main) Hbf",
  "substitute": false,
  "train": Object {
    "line": "78",
    "longDistance": true,
    "name": "ICE 123",
    "number": "123",
    "type": "ICE",
  },
}
`;

exports[`parseTimetableS multipleWings.xml 1`] = `
Object {
  "additional": undefined,
  "arrival": undefined,
  "currentStopPlace": Object {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": Object {
    "hidden": false,
    "platform": "34",
    "scheduledPlatform": "34",
    "scheduledTime": 2019-03-17T12:04:00.000Z,
    "time": 2019-03-17T12:04:00.000Z,
    "wingIds": Array [
      "2583448959431566845-1903171304",
      "7715731422484591852-1903171304",
    ],
  },
  "id": "4645697665836328305",
  "initialDeparture": 2019-03-17T13:04:00.000Z,
  "mediumId": "4645697665836328305-1903171304",
  "o": "T8",
  "productClass": "D",
  "rawId": "4645697665836328305-1903171304-1",
  "routePost": Array [
    Object {
      "name": "München Harras",
    },
    Object {
      "name": "München-Solln",
    },
    Object {
      "name": "Holzkirchen",
    },
    Object {
      "name": "Darching",
    },
    Object {
      "name": "Miesbach",
    },
    Object {
      "name": "Agatharied",
    },
    Object {
      "name": "Hausham",
    },
    Object {
      "name": "Schliersee",
    },
    Object {
      "name": "Fischhausen-Neuhaus",
    },
    Object {
      "name": "Fischbachau",
    },
    Object {
      "name": "Geitau",
    },
    Object {
      "name": "Osterhofen (Oberbay)",
    },
    Object {
      "name": "Bayrischzell",
    },
  ],
  "routePre": Array [],
  "scheduledDestination": "Bayrischzell",
  "substitute": false,
  "train": Object {
    "line": undefined,
    "longDistance": false,
    "name": "BOB 86871",
    "number": "86871",
    "type": "BOB",
  },
}
`;

exports[`parseTimetableS multipleWings.xml 2`] = `
Object {
  "additional": undefined,
  "arrival": undefined,
  "currentStopPlace": Object {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": Object {
    "hidden": false,
    "platform": "34",
    "scheduledPlatform": "34",
    "scheduledTime": 2019-03-17T12:04:00.000Z,
    "time": 2019-03-17T12:04:00.000Z,
    "wingIds": undefined,
  },
  "id": "2583448959431566845",
  "initialDeparture": 2019-03-17T13:04:00.000Z,
  "mediumId": "2583448959431566845-1903171304",
  "o": "T8",
  "productClass": "D",
  "rawId": "-2583448959431566845-1903171304-1",
  "routePost": Array [
    Object {
      "name": "München Harras",
    },
    Object {
      "name": "München-Solln",
    },
    Object {
      "name": "Holzkirchen",
    },
    Object {
      "name": "Warngau",
    },
    Object {
      "name": "Schaftlach",
    },
    Object {
      "name": "Moosrain",
    },
    Object {
      "name": "Finsterwald",
    },
    Object {
      "name": "Gmund (Tegernsee)",
    },
    Object {
      "name": "Tegernsee",
    },
  ],
  "routePre": Array [],
  "scheduledDestination": "Tegernsee",
  "substitute": false,
  "train": Object {
    "line": undefined,
    "longDistance": false,
    "name": "BOB 86971",
    "number": "86971",
    "type": "BOB",
  },
}
`;

exports[`parseTimetableS multipleWings.xml 3`] = `
Object {
  "additional": undefined,
  "arrival": undefined,
  "currentStopPlace": Object {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": Object {
    "hidden": false,
    "platform": "34",
    "scheduledPlatform": "34",
    "scheduledTime": 2019-03-17T12:04:00.000Z,
    "time": 2019-03-17T12:04:00.000Z,
    "wingIds": undefined,
  },
  "id": "7715731422484591852",
  "initialDeparture": 2019-03-17T13:04:00.000Z,
  "mediumId": "7715731422484591852-1903171304",
  "o": "T8",
  "productClass": "D",
  "rawId": "-7715731422484591852-1903171304-1",
  "routePost": Array [
    Object {
      "name": "München Harras",
    },
    Object {
      "name": "München-Solln",
    },
    Object {
      "name": "Holzkirchen",
    },
    Object {
      "name": "Warngau",
    },
    Object {
      "name": "Schaftlach",
    },
    Object {
      "name": "Reichersbeuern",
    },
    Object {
      "name": "Bad Tölz",
    },
    Object {
      "name": "Gaißach",
    },
    Object {
      "name": "Obergries",
    },
    Object {
      "name": "Lenggries",
    },
  ],
  "routePre": Array [],
  "scheduledDestination": "Lenggries",
  "substitute": false,
  "train": Object {
    "line": undefined,
    "longDistance": false,
    "name": "BOB 86921",
    "number": "86921",
    "type": "BOB",
  },
}
`;

exports[`parseTimetableS onlyArrival.xml 1`] = `
Object {
  "additional": undefined,
  "arrival": Object {
    "hidden": false,
    "platform": "10",
    "scheduledPlatform": "10",
    "scheduledTime": 2019-03-17T12:24:00.000Z,
    "time": 2019-03-17T12:24:00.000Z,
    "wingIds": undefined,
  },
  "currentStopPlace": Object {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": undefined,
  "id": "425081070176277607",
  "initialDeparture": 2019-03-17T11:00:00.000Z,
  "mediumId": "425081070176277607-1903171100",
  "o": "AR",
  "productClass": "D",
  "rawId": "425081070176277607-1903171100-11",
  "routePost": Array [],
  "routePre": Array [
    Object {
      "name": "Hamm (Westf)",
    },
    Object {
      "name": "Kamen",
    },
    Object {
      "name": "Kamen-Methler",
    },
    Object {
      "name": "Dortmund Hbf",
    },
    Object {
      "name": "Bochum Hbf",
    },
    Object {
      "name": "Wattenscheid",
    },
    Object {
      "name": "Essen Hbf",
    },
    Object {
      "name": "Mülheim (Ruhr) Hbf",
    },
    Object {
      "name": "Duisburg Hbf",
    },
    Object {
      "name": "Düsseldorf Flughafen",
    },
  ],
  "scheduledDestination": "test",
  "substitute": false,
  "train": Object {
    "line": "RE11",
    "longDistance": false,
    "name": "ABR RE11",
    "number": "26712",
    "type": "ABR",
  },
}
`;

exports[`parseTimetableS onlyDeparture.xml 1`] = `
Object {
  "additional": undefined,
  "arrival": undefined,
  "currentStopPlace": Object {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": Object {
    "hidden": false,
    "platform": "10",
    "scheduledPlatform": "10",
    "scheduledTime": 2019-03-17T12:36:00.000Z,
    "time": 2019-03-17T12:36:00.000Z,
    "wingIds": undefined,
  },
  "id": "1178432179369711067",
  "initialDeparture": 2019-03-17T12:36:00.000Z,
  "mediumId": "1178432179369711067-1903171236",
  "o": "AR",
  "productClass": "D",
  "rawId": "1178432179369711067-1903171236-1",
  "routePost": Array [
    Object {
      "name": "Düsseldorf Flughafen",
    },
    Object {
      "name": "Duisburg Hbf",
    },
    Object {
      "name": "Mülheim (Ruhr) Hbf",
    },
    Object {
      "name": "Essen Hbf",
    },
    Object {
      "name": "Wattenscheid",
    },
    Object {
      "name": "Bochum Hbf",
    },
    Object {
      "name": "Dortmund Hbf",
    },
    Object {
      "name": "Kamen-Methler",
    },
    Object {
      "name": "Kamen",
    },
    Object {
      "name": "Hamm (Westf)",
    },
    Object {
      "name": "Soest",
    },
    Object {
      "name": "Lippstadt",
    },
    Object {
      "name": "Paderborn Hbf",
    },
  ],
  "routePre": Array [],
  "scheduledDestination": "Paderborn Hbf",
  "substitute": false,
  "train": Object {
    "line": "RE11",
    "longDistance": false,
    "name": "ABR RE11",
    "number": "26719",
    "type": "ABR",
  },
}
`;

exports[`parseTimetableS simple1.xml 1`] = `
Object {
  "additional": undefined,
  "arrival": Object {
    "hidden": false,
    "platform": "13",
    "scheduledPlatform": "13",
    "scheduledTime": 2019-03-17T12:58:00.000Z,
    "time": 2019-03-17T12:58:00.000Z,
    "wingIds": undefined,
  },
  "currentStopPlace": Object {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": Object {
    "hidden": false,
    "platform": "13",
    "scheduledPlatform": "13",
    "scheduledTime": 2019-03-17T13:00:00.000Z,
    "time": 2019-03-17T13:00:00.000Z,
    "wingIds": undefined,
  },
  "id": "6062058741531589910",
  "initialDeparture": 2019-03-16T14:24:00.000Z,
  "mediumId": "6062058741531589910-1903161424",
  "o": "800354",
  "productClass": "S",
  "rawId": "-6062058741531589910-1903161424-13",
  "routePost": Array [
    Object {
      "name": "Düsseldorf-Flingern",
    },
    Object {
      "name": "Düsseldorf-Gerresheim",
    },
    Object {
      "name": "Erkrath",
    },
    Object {
      "name": "Hochdahl",
    },
    Object {
      "name": "Hochdahl-Millrath",
    },
    Object {
      "name": "Haan-Gruiten",
    },
    Object {
      "name": "Wuppertal-Vohwinkel",
    },
    Object {
      "name": "Wuppertal-Sonnborn",
    },
    Object {
      "name": "Wuppertal-Zoologischer Garten",
    },
    Object {
      "name": "Wuppertal-Steinbeck",
    },
    Object {
      "name": "Wuppertal Hbf",
    },
    Object {
      "name": "Wuppertal-Unterbarmen",
    },
    Object {
      "name": "Wuppertal-Barmen",
    },
    Object {
      "name": "Wuppertal-Oberbarmen",
    },
    Object {
      "name": "Wuppertal-Langerfeld",
    },
    Object {
      "name": "Schwelm West",
    },
    Object {
      "name": "Schwelm",
    },
    Object {
      "name": "Gevelsberg West",
    },
    Object {
      "name": "Gevelsberg-Kipp",
    },
    Object {
      "name": "Gevelsberg Hbf",
    },
    Object {
      "name": "Gevelsberg-Knapp",
    },
    Object {
      "name": "Hagen-Westerbauer",
    },
    Object {
      "name": "Hagen-Heubing",
    },
    Object {
      "name": "Hagen-Wehringhausen",
    },
    Object {
      "name": "Hagen Hbf",
    },
  ],
  "routePre": Array [
    Object {
      "name": "Mönchengladbach Hbf",
    },
    Object {
      "name": "Mönchengladbach-Lürrip",
    },
    Object {
      "name": "Korschenbroich",
    },
    Object {
      "name": "Kleinenbroich",
    },
    Object {
      "name": "Büttgen",
    },
    Object {
      "name": "Neuss Hbf",
    },
    Object {
      "name": "Neuss Am Kaiser",
    },
    Object {
      "name": "Neuss Rheinparkcenter",
    },
    Object {
      "name": "Düsseldorf-Hamm",
    },
    Object {
      "name": "Düsseldorf Völklinger Str.",
    },
    Object {
      "name": "Düsseldorf-Bilk",
    },
    Object {
      "name": "Düsseldorf Friedrichstadt",
    },
  ],
  "scheduledDestination": "Hagen Hbf",
  "substitute": false,
  "train": Object {
    "line": "8",
    "longDistance": false,
    "name": "S 8",
    "number": "30889",
    "type": "S",
  },
}
`;

exports[`parseTimetableS simple2.xml 1`] = `
Object {
  "additional": undefined,
  "arrival": Object {
    "hidden": false,
    "platform": "16",
    "scheduledPlatform": "16",
    "scheduledTime": 2019-03-17T12:46:00.000Z,
    "time": 2019-03-17T12:46:00.000Z,
    "wingIds": undefined,
  },
  "currentStopPlace": Object {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": Object {
    "hidden": false,
    "platform": "16",
    "scheduledPlatform": "16",
    "scheduledTime": 2019-03-17T12:48:00.000Z,
    "time": 2019-03-17T12:48:00.000Z,
    "wingIds": undefined,
  },
  "id": "1869793107893408377",
  "initialDeparture": 2019-03-17T10:38:00.000Z,
  "mediumId": "1869793107893408377-1903171038",
  "o": "84",
  "productClass": "F",
  "rawId": "1869793107893408377-1903171038-6",
  "routePost": Array [
    Object {
      "name": "Köln Hbf",
    },
    Object {
      "name": "Frankfurt (M)  Flughafen Fernbf",
    },
    Object {
      "name": "Frankfurt (Main) Hbf",
    },
  ],
  "routePre": Array [
    Object {
      "name": "Amsterdam Centraal",
    },
    Object {
      "name": "Utrecht Centraal",
    },
    Object {
      "name": "Arnhem Centraal",
    },
    Object {
      "name": "Oberhausen Hbf",
    },
    Object {
      "name": "Duisburg Hbf",
    },
  ],
  "scheduledDestination": "Frankfurt (Main) Hbf",
  "substitute": false,
  "train": Object {
    "line": "78",
    "longDistance": true,
    "name": "ICE 123",
    "number": "123",
    "type": "ICE",
  },
}
`;

exports[`parseTimetableS visibleDueToDelay.xml 1`] = `
Object {
  "additional": undefined,
  "arrival": Object {
    "hidden": false,
    "platform": "13",
    "scheduledPlatform": "13",
    "scheduledTime": 2019-03-17T10:58:00.000Z,
    "time": 2019-03-17T10:58:00.000Z,
    "wingIds": undefined,
  },
  "currentStopPlace": Object {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": Object {
    "hidden": false,
    "platform": "13",
    "scheduledPlatform": "13",
    "scheduledTime": 2019-03-17T11:00:00.000Z,
    "time": 2019-03-17T11:00:00.000Z,
    "wingIds": undefined,
  },
  "id": "6062058741531589910",
  "initialDeparture": 2019-03-16T14:24:00.000Z,
  "mediumId": "6062058741531589910-1903161424",
  "o": "800354",
  "productClass": "S",
  "rawId": "-6062058741531589910-1903161424-13",
  "routePost": Array [
    Object {
      "name": "Düsseldorf-Flingern",
    },
    Object {
      "name": "Düsseldorf-Gerresheim",
    },
    Object {
      "name": "Erkrath",
    },
    Object {
      "name": "Hochdahl",
    },
    Object {
      "name": "Hochdahl-Millrath",
    },
    Object {
      "name": "Haan-Gruiten",
    },
    Object {
      "name": "Wuppertal-Vohwinkel",
    },
    Object {
      "name": "Wuppertal-Sonnborn",
    },
    Object {
      "name": "Wuppertal-Zoologischer Garten",
    },
    Object {
      "name": "Wuppertal-Steinbeck",
    },
    Object {
      "name": "Wuppertal Hbf",
    },
    Object {
      "name": "Wuppertal-Unterbarmen",
    },
    Object {
      "name": "Wuppertal-Barmen",
    },
    Object {
      "name": "Wuppertal-Oberbarmen",
    },
    Object {
      "name": "Wuppertal-Langerfeld",
    },
    Object {
      "name": "Schwelm West",
    },
    Object {
      "name": "Schwelm",
    },
    Object {
      "name": "Gevelsberg West",
    },
    Object {
      "name": "Gevelsberg-Kipp",
    },
    Object {
      "name": "Gevelsberg Hbf",
    },
    Object {
      "name": "Gevelsberg-Knapp",
    },
    Object {
      "name": "Hagen-Westerbauer",
    },
    Object {
      "name": "Hagen-Heubing",
    },
    Object {
      "name": "Hagen-Wehringhausen",
    },
    Object {
      "name": "Hagen Hbf",
    },
  ],
  "routePre": Array [
    Object {
      "name": "Mönchengladbach Hbf",
    },
    Object {
      "name": "Mönchengladbach-Lürrip",
    },
    Object {
      "name": "Korschenbroich",
    },
    Object {
      "name": "Kleinenbroich",
    },
    Object {
      "name": "Büttgen",
    },
    Object {
      "name": "Neuss Hbf",
    },
    Object {
      "name": "Neuss Am Kaiser",
    },
    Object {
      "name": "Neuss Rheinparkcenter",
    },
    Object {
      "name": "Düsseldorf-Hamm",
    },
    Object {
      "name": "Düsseldorf Völklinger Str.",
    },
    Object {
      "name": "Düsseldorf-Bilk",
    },
    Object {
      "name": "Düsseldorf Friedrichstadt",
    },
  ],
  "scheduledDestination": "Hagen Hbf",
  "substitute": false,
  "train": Object {
    "line": "8",
    "longDistance": false,
    "name": "S 8",
    "number": "30889",
    "type": "S",
  },
}
`;

exports[`parseTimetableS wings.xml 1`] = `
Object {
  "additional": undefined,
  "arrival": Object {
    "hidden": false,
    "platform": "4",
    "scheduledPlatform": "4",
    "scheduledTime": 2019-03-17T13:51:00.000Z,
    "time": 2019-03-17T13:51:00.000Z,
    "wingIds": Array [
      "4249721926697031159-1903171328",
    ],
  },
  "currentStopPlace": Object {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": Object {
    "hidden": false,
    "platform": "4",
    "scheduledPlatform": "4",
    "scheduledTime": 2019-03-17T13:54:00.000Z,
    "time": 2019-03-17T13:54:00.000Z,
    "wingIds": Array [
      "4249721926697031159-1903171328",
    ],
  },
  "id": "7616096009230090656",
  "initialDeparture": 2019-03-17T13:28:00.000Z,
  "mediumId": "7616096009230090656-1903171328",
  "o": "80",
  "productClass": "F",
  "rawId": "7616096009230090656-1903171328-5",
  "routePost": Array [
    Object {
      "name": "Göttingen",
    },
    Object {
      "name": "Kassel-Wilhelmshöhe",
    },
    Object {
      "name": "Fulda",
    },
    Object {
      "name": "Würzburg Hbf",
    },
    Object {
      "name": "Treuchtlingen",
    },
    Object {
      "name": "Donauwörth",
    },
    Object {
      "name": "Augsburg Hbf",
    },
    Object {
      "name": "München Hbf",
    },
  ],
  "routePre": Array [
    Object {
      "name": "Hamburg Hbf",
    },
    Object {
      "name": "Hamburg-Harburg",
    },
    Object {
      "name": "Lüneburg",
    },
    Object {
      "name": "Uelzen",
    },
  ],
  "scheduledDestination": "München Hbf",
  "substitute": false,
  "train": Object {
    "line": "24",
    "longDistance": true,
    "name": "ICE 1587",
    "number": "1587",
    "type": "ICE",
  },
}
`;
